--- a/bucket-list.css
+++ b/bucket-list.css
@@ -1,10 +1,14 @@
 .bucket-list-card{
     background: linear-gradient(135deg,#ffafbd ,#ffc3a0);
     color: #fff;
-    margin: 0;
     padding: 40px 35px;
     text-align: center;
-    position: absolute;
+    transform: translateX(-6%) rotate(-3deg);
+    transition: transform 800ms cubic-bezier(.05,.43,.25,.95);
+}
+
+.card-pack:hover > .bucket-list-card{
+    transform: translate(-30%, -20%) rotate(7.5deg);
 }
 
 .add-task {
