--- a/styles.css
+++ b/styles.css
@@ -7,22 +7,79 @@
 
 body {
     background: #222;
+    height: 120vh;
+    display: grid;
+    place-items: center;
 }
 
 .card{
-    height: 658px;
-    width: 90%;
-    max-width: 470px;
-    border-radius: 30px;
-    margin: 100px;
+    width: 35vmin;
+    aspect-ratio: 5/ 7;
+    border-radius: 2vmin;
+    display: inline-block;
+    position: absolute;
+}
+
+.card-pack, .card {
+    aspect-ratio: 5/7;
 }
 
 .weather-card{
     background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
-    margin: 100px auto 0;
     padding: 40px 35px;
     text-align: center;
+    transform: translateX(-10%) rotate(-1deg);
+    transition: transform 800ms cubic-bezier(.05,.43,.25,.95);
+}
+
+.card-pack:hover > .weather-card {
+    transform: translate(-110%, 20%) rotate(-20deg);
+}
+
+.movedCards > .news-card{
+    position: absolute;
+    top: 100px;
+    left: 400px;
+}
+
+.movedCards > .weather-card{
+    position: absolute;
+    top: 700px;
+    left: 600px;
+    opacity: 1;
+}
+
+.movedCards > .calculator-card{
+    position: absolute;
+    top: 900px;
+    left: 1000px;
+}
+
+.movedCards > .bucket-list-card{
+    position: absolute;
+    top: 130px;
+    left: 900px;
+}
+
+.movedCards > .calendar-card{
+    position: absolute;
+    top: 150px;
+    left: 1300px;
+}
+
+.card-pack:hover > .card {
+    opacity: 0.95;
+}
+
+.movedCards > .card {
+    align-items: center;
+}
+
+.card-pack:hover > .card > h1 {
+    position: absolute;
+    text-align: center;
+    opacity: 1;
 }
 
 .search {
@@ -109,4 +166,8 @@ body {
     font-size: 14px;
     margin-top: 10px;
     display: none;
+}
+
+.card h1 {
+    margin-bottom: 15px;
 }
